--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ cycler==0.10.0
 Cython==0.29.14
 decorator==4.4.2
 Django==3.1.7
+django-heroku==0.3.1
 django-sass==1.0.0
 gensim==3.8.3
+gunicorn==20.0.4
 idna==2.10
 ipython==7.20.0
 ipython-genutils==0.2.0
